// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render a h1 element with type 'page' 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
}

<class_1
  type="page"
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    type="page"
  >
    <HeadingComponent
      inline={false}
      type="page"
    >
      <styled.h1
        className="heading"
        inline={false}
        tag={[Function]}
      >
        <h1
          className="heading c0"
        >
          Hello I am a h1
        </h1>
      </styled.h1>
    </HeadingComponent>
  </Skeleton>
</class_1>
`;

exports[`<Heading /> should render a h2 element with type 'section' 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
}

<class_1
  type="section"
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    type="section"
  >
    <HeadingComponent
      inline={false}
      type="section"
    >
      <styled.h2
        className="heading"
        inline={false}
        tag={[Function]}
      >
        <h2
          className="heading c0"
        >
          Hello I am a h2
        </h2>
      </styled.h2>
    </HeadingComponent>
  </Skeleton>
</class_1>
`;

exports[`<Heading /> should render a h3 element with type 'subsection' 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
}

<class_1
  type="subsection"
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    type="subsection"
  >
    <HeadingComponent
      inline={false}
      type="subsection"
    >
      <styled.h3
        className="heading"
        inline={false}
        tag={[Function]}
      >
        <h3
          className="heading c0"
        >
          Hello I am a h3
        </h3>
      </styled.h3>
    </HeadingComponent>
  </Skeleton>
</class_1>
`;

exports[`<Heading /> should render a skeleton element if skeletonOptions are passed to the component 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
}

<class_1
  type="page"
>
  <Skeleton
    className=""
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    type="page"
  >
    <HeadingComponent
      inline={false}
      type="page"
    >
      <styled.h1
        className="heading"
        inline={false}
        tag={[Function]}
      >
        <h1
          className="heading c0"
        >
          Hello, world!
        </h1>
      </styled.h1>
    </HeadingComponent>
  </Skeleton>
</class_1>
`;

exports[`<Heading /> should render an inline h1 element 1`] = `
.c0 {
  font-family: 'Open Sans',Arial,sans-serif;
  display: inline-block;
}

<class_1
  inline={true}
  type="page"
>
  <Skeleton
    className=""
    inline={true}
    skeletonOptions={
      Object {
        "shape": "line",
        "showSkeleton": false,
        "size": "large",
      }
    }
    type="page"
  >
    <HeadingComponent
      inline={true}
      type="page"
    >
      <styled.h1
        className="heading"
        inline={true}
        tag={[Function]}
      >
        <h1
          className="heading c0"
        >
          Hello I am a h1
        </h1>
      </styled.h1>
    </HeadingComponent>
  </Skeleton>
</class_1>
`;
